# python-project-50

./: .coverage  README.md  coverage.xml  pyproject.toml  sonar-project.properties
.github/workflows/: ci.yml
gendiff/: parser.py
gendiff/scripts/: gendiff.py
hexlet_code.egg-info/: PKG-INFO  SOURCES.txt
tests/: test_gendiff.py
