[tool.poetry]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [" Olha Devlysh <odevlysh@gmail.com>"]
license = "MIT"
readme = "README.md"
packages = [
  { include = "gendiff" },
]

[tool.poetry.dependencies]
python = "^3.11"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
gendiff = "gendiff.scripts.gendiff:main"
