[project]
name = "hexlet-code"
version = "0.1.0"
description = ""
authors = [{ name = "Olha Devlysh", email = "odevlysh@gmail.com" }]
license = { text = "MIT" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
gendiff = "gendiff.scripts.gendiff:main"

[tool.uv]

[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

